<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Travis</string>

    <string name="taxi">Taxi</string>
    <string name="client">Client</string>

    <!-- Dialog strings -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="cancel">Cancel</string>
    <string name="done">Done</string>


    <!-- Login and Register strings-->
    <string name="remember_password">Remember password</string>
    <string name="login">Login</string>
    <string name="create_new_account">Create new account</string>
    <string name="login_error">Invalid login!</string>
    <string name="register_ok">Registered successfully!</string>


    <!-- Register strings -->
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="photo_url">Photo URL</string>


    <!-- Side menu strings -->
    <string name="menu_rides">Scheduled rides</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_closest">Closest Taxis</string>
    <string name="menu_best_rated">Best rated Taxis</string>
    <string name="menu_favorites">Favorites Taxis</string>
    <string name="menu_settings">Settings</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>


    <!-- Action bar menu strings -->
    <string name="action_bar_show_menu">Show Menu</string>
    <string name="action_bar_search">Search</string>


    <!-- Taxi ride setup strings -->
    <string name="not_found">Not found</string>
    <string name="here_and_now">Here &amp; Now</string>
    <string name="later">Later or at another location</string>
    <string name="set_origin">Set Origin</string>


    <!-- Wait for taxi strings -->
    <string name="your_scheduled_ride">Your scheduled ride:</string>
    <string name="see_more">See all your scheduled rides</string>
    <string name="your_scheduled_rides">Your sheduled rides:</string>
    <string name="wait_for_taxi">Done! Your taxi will arrive soon…</string>
    <string name="wait_for_taxi_suggestion">
        We will notify you when your taxi arrives.
        \nTip: You should now set the destination to get a move on once
        your taxi arrives!
    </string>
    <string name="set_destination">Set Destination</string>
    <string name="call_another_taxi">Call another taxi</string>
    <string name="insert_address">Insert address…</string>

    
    <!-- Payment strings -->
    <string name="submit">Submit</string>
    <string name="dont_rate">Don\'t rate</string>


    <!-- Notification strings -->
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>

</resources>