<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:bootstrapbutton="http://schemas.android.com/apk/res-auto"
                xmlns:fontawesometext="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <!-- An invisible view aligned to the center of the parent. Allows other
        views to be arranged on either side -->
    <View
        android:id="@+id/centerShim"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="46dp"
        android:layout_height="46dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:src="@drawable/cabs"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/username_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_size="large"
        android:layout_marginTop="60dp"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true"
        android:hint="@string/username"/>

    <com.beardedhen.androidbootstrap.BootstrapEditText
        android:id="@+id/pass_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        bootstrapbutton:bb_roundedCorners="true"
        bootstrapbutton:bb_size="large"
        android:layout_below="@+id/username_field"
        android:layout_alignLeft="@+id/username_field"
        android:layout_marginTop="23dp"
        android:hint="@string/password"/>

    <CheckBox
        android:id="@+id/remember_pass_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/remember_password"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/pass_field"
        android:layout_centerHorizontal="true"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_account"
        android:layout_marginTop="15dp"
        android:layout_below="@id/remember_pass_checkbox"
        android:layout_toRightOf="@id/centerShim"
        android:layout_alignParentRight="true"
        android:layout_marginRight="30dp"
        android:onClick="onRegisterButtonClicked"/>

    <com.beardedhen.androidbootstrap.BootstrapButton
        android:id="@+id/login_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:layout_marginTop="15dp"
        android:layout_below="@id/remember_pass_checkbox"
        android:layout_toLeftOf="@id/centerShim"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="30dp"
        android:onClick="onLoginButtonClicked"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/login_button"
        android:layout_alignRight="@+id/login_button"
        android:layout_marginTop="38dp"
        android:layout_marginRight="20dp"
        android:text="GPS:"/>
    <TextView
        android:id="@+id/gps_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/register_button"
        android:layout_alignLeft="@+id/register_button"
        android:layout_marginTop="38dp"
        android:layout_marginLeft="20dp"/>


</RelativeLayout>